--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -2,6 +2,425 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import glob\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Sources\\\\uber-raw-data-apr14.csv', 'Sources\\\\uber-raw-data-aug14.csv', 'Sources\\\\uber-raw-data-jul14.csv', 'Sources\\\\uber-raw-data-jun14.csv', 'Sources\\\\uber-raw-data-may14.csv', 'Sources\\\\uber-raw-data-sep14.csv']\n"
+     ]
+    }
+   ],
+   "source": [
+    "pandas_files = [name for name in glob.glob('Sources/*')]\n",
+    "df_files = [os.path.basename(name) for name in glob.glob('Sources/*')]\n",
+    "\n",
+    "print(pandas_files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_df():\n",
+    "    df_paths = [name for name in glob.glob('Sources/*')]\n",
+    "    lst = []\n",
+    "    for df in df_paths:\n",
+    "        data = pd.read_csv(df)\n",
+    "        lst.append(data)\n",
+    "    return pd.concat(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date/Time</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lon</th>\n",
+       "      <th>Base</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4/1/2014 0:11:00</td>\n",
+       "      <td>40.7690</td>\n",
+       "      <td>-73.9549</td>\n",
+       "      <td>B02512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4/1/2014 0:17:00</td>\n",
+       "      <td>40.7267</td>\n",
+       "      <td>-74.0345</td>\n",
+       "      <td>B02512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4/1/2014 0:21:00</td>\n",
+       "      <td>40.7316</td>\n",
+       "      <td>-73.9873</td>\n",
+       "      <td>B02512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4/1/2014 0:28:00</td>\n",
+       "      <td>40.7588</td>\n",
+       "      <td>-73.9776</td>\n",
+       "      <td>B02512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4/1/2014 0:33:00</td>\n",
+       "      <td>40.7594</td>\n",
+       "      <td>-73.9722</td>\n",
+       "      <td>B02512</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Date/Time      Lat      Lon    Base\n",
+       "0  4/1/2014 0:11:00  40.7690 -73.9549  B02512\n",
+       "1  4/1/2014 0:17:00  40.7267 -74.0345  B02512\n",
+       "2  4/1/2014 0:21:00  40.7316 -73.9873  B02512\n",
+       "3  4/1/2014 0:28:00  40.7588 -73.9776  B02512\n",
+       "4  4/1/2014 0:33:00  40.7594 -73.9722  B02512"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = load_df()\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18137308\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_size = df.size\n",
+    "print(df_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date/Time     object\n",
+       "Lat          float64\n",
+       "Lon          float64\n",
+       "Base          object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date/Time</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lon</th>\n",
+       "      <th>Base</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2014-04-01 00:11:00</td>\n",
+       "      <td>40.7690</td>\n",
+       "      <td>-73.9549</td>\n",
+       "      <td>B02512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2014-04-01 00:17:00</td>\n",
+       "      <td>40.7267</td>\n",
+       "      <td>-74.0345</td>\n",
+       "      <td>B02512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2014-04-01 00:21:00</td>\n",
+       "      <td>40.7316</td>\n",
+       "      <td>-73.9873</td>\n",
+       "      <td>B02512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2014-04-01 00:28:00</td>\n",
+       "      <td>40.7588</td>\n",
+       "      <td>-73.9776</td>\n",
+       "      <td>B02512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2014-04-01 00:33:00</td>\n",
+       "      <td>40.7594</td>\n",
+       "      <td>-73.9722</td>\n",
+       "      <td>B02512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>2014-04-01 06:54:00</td>\n",
+       "      <td>40.7653</td>\n",
+       "      <td>-73.9723</td>\n",
+       "      <td>B02512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>2014-04-01 06:56:00</td>\n",
+       "      <td>40.7644</td>\n",
+       "      <td>-73.9769</td>\n",
+       "      <td>B02512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>2014-04-01 06:57:00</td>\n",
+       "      <td>40.7726</td>\n",
+       "      <td>-73.9532</td>\n",
+       "      <td>B02512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>2014-04-01 06:59:00</td>\n",
+       "      <td>40.7898</td>\n",
+       "      <td>-73.9661</td>\n",
+       "      <td>B02512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>2014-04-01 07:00:00</td>\n",
+       "      <td>40.7839</td>\n",
+       "      <td>-73.9703</td>\n",
+       "      <td>B02512</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Date/Time      Lat      Lon    Base\n",
+       "0  2014-04-01 00:11:00  40.7690 -73.9549  B02512\n",
+       "1  2014-04-01 00:17:00  40.7267 -74.0345  B02512\n",
+       "2  2014-04-01 00:21:00  40.7316 -73.9873  B02512\n",
+       "3  2014-04-01 00:28:00  40.7588 -73.9776  B02512\n",
+       "4  2014-04-01 00:33:00  40.7594 -73.9722  B02512\n",
+       "..                 ...      ...      ...     ...\n",
+       "95 2014-04-01 06:54:00  40.7653 -73.9723  B02512\n",
+       "96 2014-04-01 06:56:00  40.7644 -73.9769  B02512\n",
+       "97 2014-04-01 06:57:00  40.7726 -73.9532  B02512\n",
+       "98 2014-04-01 06:59:00  40.7898 -73.9661  B02512\n",
+       "99 2014-04-01 07:00:00  40.7839 -73.9703  B02512\n",
+       "\n",
+       "[100 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_apr.head(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_apr['Date/Time'] = pd.to_datetime(df_apr['Date/Time'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date/Time</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lon</th>\n",
+       "      <th>Base</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2014-04-01 00:11:00</td>\n",
+       "      <td>40.7690</td>\n",
+       "      <td>-73.9549</td>\n",
+       "      <td>B02512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2014-04-01 00:17:00</td>\n",
+       "      <td>40.7267</td>\n",
+       "      <td>-74.0345</td>\n",
+       "      <td>B02512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2014-04-01 00:21:00</td>\n",
+       "      <td>40.7316</td>\n",
+       "      <td>-73.9873</td>\n",
+       "      <td>B02512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2014-04-01 00:28:00</td>\n",
+       "      <td>40.7588</td>\n",
+       "      <td>-73.9776</td>\n",
+       "      <td>B02512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2014-04-01 00:33:00</td>\n",
+       "      <td>40.7594</td>\n",
+       "      <td>-73.9722</td>\n",
+       "      <td>B02512</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Date/Time      Lat      Lon    Base\n",
+       "0 2014-04-01 00:11:00  40.7690 -73.9549  B02512\n",
+       "1 2014-04-01 00:17:00  40.7267 -74.0345  B02512\n",
+       "2 2014-04-01 00:21:00  40.7316 -73.9873  B02512\n",
+       "3 2014-04-01 00:28:00  40.7588 -73.9776  B02512\n",
+       "4 2014-04-01 00:33:00  40.7594 -73.9722  B02512"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_apr.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -9,8 +428,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
