--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,27 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Sources\\\\uber-raw-data-apr14.csv', 'Sources\\\\uber-raw-data-aug14.csv', 'Sources\\\\uber-raw-data-jul14.csv', 'Sources\\\\uber-raw-data-jun14.csv', 'Sources\\\\uber-raw-data-may14.csv', 'Sources\\\\uber-raw-data-sep14.csv']\n"
-     ]
-    }
-   ],
-   "source": [
-    "pandas_files = [name for name in glob.glob('Sources/*')]\n",
-    "df_files = [os.path.basename(name) for name in glob.glob('Sources/*')]\n",
-    "\n",
-    "print(pandas_files)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +107,7 @@
        "4  4/1/2014 0:33:00  40.7594 -73.9722  B02512"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +150,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,242 +161,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date/Time</th>\n",
-       "      <th>Lat</th>\n",
-       "      <th>Lon</th>\n",
-       "      <th>Base</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2014-04-01 00:11:00</td>\n",
-       "      <td>40.7690</td>\n",
-       "      <td>-73.9549</td>\n",
-       "      <td>B02512</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2014-04-01 00:17:00</td>\n",
-       "      <td>40.7267</td>\n",
-       "      <td>-74.0345</td>\n",
-       "      <td>B02512</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2014-04-01 00:21:00</td>\n",
-       "      <td>40.7316</td>\n",
-       "      <td>-73.9873</td>\n",
-       "      <td>B02512</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2014-04-01 00:28:00</td>\n",
-       "      <td>40.7588</td>\n",
-       "      <td>-73.9776</td>\n",
-       "      <td>B02512</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2014-04-01 00:33:00</td>\n",
-       "      <td>40.7594</td>\n",
-       "      <td>-73.9722</td>\n",
-       "      <td>B02512</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>2014-04-01 06:54:00</td>\n",
-       "      <td>40.7653</td>\n",
-       "      <td>-73.9723</td>\n",
-       "      <td>B02512</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>2014-04-01 06:56:00</td>\n",
-       "      <td>40.7644</td>\n",
-       "      <td>-73.9769</td>\n",
-       "      <td>B02512</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>2014-04-01 06:57:00</td>\n",
-       "      <td>40.7726</td>\n",
-       "      <td>-73.9532</td>\n",
-       "      <td>B02512</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>2014-04-01 06:59:00</td>\n",
-       "      <td>40.7898</td>\n",
-       "      <td>-73.9661</td>\n",
-       "      <td>B02512</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>2014-04-01 07:00:00</td>\n",
-       "      <td>40.7839</td>\n",
-       "      <td>-73.9703</td>\n",
-       "      <td>B02512</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>100 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             Date/Time      Lat      Lon    Base\n",
-       "0  2014-04-01 00:11:00  40.7690 -73.9549  B02512\n",
-       "1  2014-04-01 00:17:00  40.7267 -74.0345  B02512\n",
-       "2  2014-04-01 00:21:00  40.7316 -73.9873  B02512\n",
-       "3  2014-04-01 00:28:00  40.7588 -73.9776  B02512\n",
-       "4  2014-04-01 00:33:00  40.7594 -73.9722  B02512\n",
-       "..                 ...      ...      ...     ...\n",
-       "95 2014-04-01 06:54:00  40.7653 -73.9723  B02512\n",
-       "96 2014-04-01 06:56:00  40.7644 -73.9769  B02512\n",
-       "97 2014-04-01 06:57:00  40.7726 -73.9532  B02512\n",
-       "98 2014-04-01 06:59:00  40.7898 -73.9661  B02512\n",
-       "99 2014-04-01 07:00:00  40.7839 -73.9703  B02512\n",
-       "\n",
-       "[100 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_apr.head(100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_apr['Date/Time'] = pd.to_datetime(df_apr['Date/Time'])"
+    "df['Date/Time'] = pd.to_datetime(df['Date/Time'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date/Time</th>\n",
-       "      <th>Lat</th>\n",
-       "      <th>Lon</th>\n",
-       "      <th>Base</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2014-04-01 00:11:00</td>\n",
-       "      <td>40.7690</td>\n",
-       "      <td>-73.9549</td>\n",
-       "      <td>B02512</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2014-04-01 00:17:00</td>\n",
-       "      <td>40.7267</td>\n",
-       "      <td>-74.0345</td>\n",
-       "      <td>B02512</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2014-04-01 00:21:00</td>\n",
-       "      <td>40.7316</td>\n",
-       "      <td>-73.9873</td>\n",
-       "      <td>B02512</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2014-04-01 00:28:00</td>\n",
-       "      <td>40.7588</td>\n",
-       "      <td>-73.9776</td>\n",
-       "      <td>B02512</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2014-04-01 00:33:00</td>\n",
-       "      <td>40.7594</td>\n",
-       "      <td>-73.9722</td>\n",
-       "      <td>B02512</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "            Date/Time      Lat      Lon    Base\n",
-       "0 2014-04-01 00:11:00  40.7690 -73.9549  B02512\n",
-       "1 2014-04-01 00:17:00  40.7267 -74.0345  B02512\n",
-       "2 2014-04-01 00:21:00  40.7316 -73.9873  B02512\n",
-       "3 2014-04-01 00:28:00  40.7588 -73.9776  B02512\n",
-       "4 2014-04-01 00:33:00  40.7594 -73.9722  B02512"
+       "Date/Time    datetime64[ns]\n",
+       "Lat                 float64\n",
+       "Lon                 float64\n",
+       "Base                 object\n",
+       "dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_apr.head()"
+    "df.dtypes"
    ]
   },
   {
