--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -4435,6 +4435,62 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Practice Series Filtering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this lab, we will practice filtering with conditionals and sorting on pandas series using dataset that contains information about international cricket players who have played since 2002. The data includes the player's name, number of innings they have played, number of runs they have scored, number of balls they have faced, number of times they have been dismissed, their batting average, their strike rate, their highest score, number of fours they have hit, number of sixes they have hit, number of times they have scored a half-century, and number of times they have scored a century.\n",
+    "\n",
+    "Below are the columns of the dataset:\n",
+    "\n",
+    "- Player: Name of the player\n",
+    "- I: Number of innings played\n",
+    "- R: Number of runs scored\n",
+    "- B: Number of balls faced\n",
+    "- Outs: Number of times dismissed\n",
+    "- Avg: Batting average\n",
+    "- SR: Strike rate\n",
+    "- HS: Highest score\n",
+    "- 4s: Number of fours hit\n",
+    "- 6s: Number of sixes hit\n",
+    "- 50: Number of times scored a half-century\n",
+    "- 100: Number of times scored a century\n",
+    "\n",
+    "Let's get started with the lab now!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
