--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -6150,6 +6150,311 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Practicing Series Vectorized Operations with Penguins Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now it's time to put your knowledge of vectorized operations on Pandas series to the test. In this lab, we will be working with a dataset that contains information about penguins. Each penguin is described by various attributes such as species, island, culmen length, culmen depth, flipper length, body mass, and gender.\n",
+    "\n",
+    "In this lab we will practice vectorized operations on Pandas series. We will learn how to perform arithmetic operations on series and apply mathematical functions to series.\n",
+    "\n",
+    "Throughout the lab, you will be presented with coding activities that require you to write code snippets to perform specific operations on the series. Each activity will be followed by a solution, allowing you to verify your code and understand the correct approach.\n",
+    "\n",
+    "In addition to individual topic-based activities, there will also be mixed-topic activities that require you to combine different operations to achieve a specific outcome. These activities will test your ability to apply multiple concepts simultaneously.\n",
+    "\n",
+    "By the end of this lab, you will have gained a solid understanding of vectorized operations on Pandas series and be able to manipulate and analyze data efficiently using these techniques.\n",
+    "\n",
+    "Let's dive into the activities and explore the power of vectorized operations on Pandas series!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Activities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>species</th>\n",
+       "      <th>island</th>\n",
+       "      <th>culmen_length_mm</th>\n",
+       "      <th>culmen_depth_mm</th>\n",
+       "      <th>flipper_length_mm</th>\n",
+       "      <th>body_mass_g</th>\n",
+       "      <th>sex</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>39.1</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>181.0</td>\n",
+       "      <td>3750.0</td>\n",
+       "      <td>MALE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>39.5</td>\n",
+       "      <td>17.4</td>\n",
+       "      <td>186.0</td>\n",
+       "      <td>3800.0</td>\n",
+       "      <td>FEMALE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>40.3</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>195.0</td>\n",
+       "      <td>3250.0</td>\n",
+       "      <td>FEMALE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>36.7</td>\n",
+       "      <td>19.3</td>\n",
+       "      <td>193.0</td>\n",
+       "      <td>3450.0</td>\n",
+       "      <td>FEMALE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>39.3</td>\n",
+       "      <td>20.6</td>\n",
+       "      <td>190.0</td>\n",
+       "      <td>3650.0</td>\n",
+       "      <td>MALE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>328</th>\n",
+       "      <td>Gentoo</td>\n",
+       "      <td>Biscoe</td>\n",
+       "      <td>47.2</td>\n",
+       "      <td>13.7</td>\n",
+       "      <td>214.0</td>\n",
+       "      <td>4925.0</td>\n",
+       "      <td>FEMALE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>329</th>\n",
+       "      <td>Gentoo</td>\n",
+       "      <td>Biscoe</td>\n",
+       "      <td>46.8</td>\n",
+       "      <td>14.3</td>\n",
+       "      <td>215.0</td>\n",
+       "      <td>4850.0</td>\n",
+       "      <td>FEMALE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>330</th>\n",
+       "      <td>Gentoo</td>\n",
+       "      <td>Biscoe</td>\n",
+       "      <td>50.4</td>\n",
+       "      <td>15.7</td>\n",
+       "      <td>222.0</td>\n",
+       "      <td>5750.0</td>\n",
+       "      <td>MALE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>331</th>\n",
+       "      <td>Gentoo</td>\n",
+       "      <td>Biscoe</td>\n",
+       "      <td>45.2</td>\n",
+       "      <td>14.8</td>\n",
+       "      <td>212.0</td>\n",
+       "      <td>5200.0</td>\n",
+       "      <td>FEMALE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>332</th>\n",
+       "      <td>Gentoo</td>\n",
+       "      <td>Biscoe</td>\n",
+       "      <td>49.9</td>\n",
+       "      <td>16.1</td>\n",
+       "      <td>213.0</td>\n",
+       "      <td>5400.0</td>\n",
+       "      <td>MALE</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>333 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    species     island  culmen_length_mm  culmen_depth_mm  flipper_length_mm  \\\n",
+       "0    Adelie  Torgersen              39.1             18.7              181.0   \n",
+       "1    Adelie  Torgersen              39.5             17.4              186.0   \n",
+       "2    Adelie  Torgersen              40.3             18.0              195.0   \n",
+       "3    Adelie  Torgersen              36.7             19.3              193.0   \n",
+       "4    Adelie  Torgersen              39.3             20.6              190.0   \n",
+       "..      ...        ...               ...              ...                ...   \n",
+       "328  Gentoo     Biscoe              47.2             13.7              214.0   \n",
+       "329  Gentoo     Biscoe              46.8             14.3              215.0   \n",
+       "330  Gentoo     Biscoe              50.4             15.7              222.0   \n",
+       "331  Gentoo     Biscoe              45.2             14.8              212.0   \n",
+       "332  Gentoo     Biscoe              49.9             16.1              213.0   \n",
+       "\n",
+       "     body_mass_g     sex  \n",
+       "0         3750.0    MALE  \n",
+       "1         3800.0  FEMALE  \n",
+       "2         3250.0  FEMALE  \n",
+       "3         3450.0  FEMALE  \n",
+       "4         3650.0    MALE  \n",
+       "..           ...     ...  \n",
+       "328       4925.0  FEMALE  \n",
+       "329       4850.0  FEMALE  \n",
+       "330       5750.0    MALE  \n",
+       "331       5200.0  FEMALE  \n",
+       "332       5400.0    MALE  \n",
+       "\n",
+       "[333 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Read the dataset into a DataFrame\n",
+    "df = pd.read_csv('penguins_cleaned.csv')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert all columns to pandas Series\n",
+    "species = df['species']\n",
+    "island = df['island']\n",
+    "culmen_length_mm = df['culmen_length_mm']\n",
+    "culmen_depth_mm = df['culmen_depth_mm']\n",
+    "flipper_length_mm = df['flipper_length_mm']\n",
+    "body_mass_g = df['body_mass_g']\n",
+    "gender = df['sex']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. **Add a constant value of 100 to the ``body_mass_g`` series**\n",
+    "\n",
+    "    Create a new series called ``body_mass_g_plus_100`` by adding a constant value of 100 to the ``body_mass_g`` series."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      3850.0\n",
+       "1      3900.0\n",
+       "2      3350.0\n",
+       "3      3550.0\n",
+       "4      3750.0\n",
+       "        ...  \n",
+       "328    5025.0\n",
+       "329    4950.0\n",
+       "330    5850.0\n",
+       "331    5300.0\n",
+       "332    5500.0\n",
+       "Name: body_mass_g, Length: 333, dtype: float64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "body_mass_g_plus_100 = body_mass_g + 100\n",
+    "body_mass_g_plus_100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. **Subtract the ``culmen_length_mm`` series from the ``flipper_length_mm`` series**\n",
+    "\n",
+    "    Subtract the ``culmen_length_mm`` series from the ``flipper_length_mm`` series and assign the result to a new series called ``length_difference``."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
